# particleKernels

./: .gitignore  CMakeLists.txt  README.md  a.out  build.sh  log  perf.data
anal/: Untitled.ipynb  scaling.py  timePerf.py
anal/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
anal/tst-sum2/: scalingUnbalanced.txt  tst
anal/tst-sum_pairs_dis/: tst
anal/tst-sum_pairs_undis/: tst
anal/tst-sum_pairs_undis_opt/: tst
anal/tst-sum_pairs_undis_opt-1/: tst
anal/tst2/: tst
anal/tst3/: main
cmake/: init.cmake
src/: CMakeLists.txt  cellData.h  cellNeighbourList.cpp  cellNeighbourList.h  lattice.cpp  lattice.h  listKernels.hpp  main.cpp  particleData.cpp  particleData.h  randomKernel.cpp  randomKernel.h  timers.cpp  timers.h  twoBodyDistances.hpp  twoBodyDistancesDirect.cpp  twoBodyDistancesDirect.h  twoBodyPotential.cpp  twoBodyPotential.h  twoBodyPotential.hpp  utils.cpp  utils.h
timers/: a.out  main.cpp  timers
timers/test/: annotations.advidb2  project_read_only.infoadvixe  test.advixeproj
timers/test/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  roofline.data  roofline_int.data  roofline_mix.data  settings.xml
timers/test/e000/dp000/: dp000.advixe  open.infoadvixe  summary.advisum
timers/test/e000/dp000/config/: collection.cfg  context_values.cfg  runtc.options
timers/test/e000/dp000/data.0/: .tc.lck  advixe-runtc.txt  timers.pdr  timers.pdr.db3  timers.pdr_bak
timers/test/e000/dp000/summary/: summary_data.xml
timers/test/e000/hs022/: annotations.advias2  hs022.advixe  issues.xml  metrics.advisum  recommendations.advisum  threading.advisum  vectorization.advisum
timers/test/e000/hs022/config/: collection.cfg  context_values.cfg  runss.options
timers/test/e000/hs022/data.0/: 28600-28612.0-28612.0.th  28600-28612.0-28612.0.th.aux  28600-28612.0-28627.0.th  28600-28612.0-28627.0.th.aux  28600-28612.0-28628.0.th  28600-28612.0-28628.0.th.aux  28600-28612.0-28629.0.th  28600-28612.0-28629.0.th.aux  28600-28612.0.trace  systemcollector-28600-luca-ThinkPad-T470.sc  userapicollector-28612-9180e19d-28612-9182de46.th  userapicollector-28612-9180e19d-28626-918e6ba5.th  userapicollector-28612-9180e19d-28627-91eef2f7.th  userapicollector-28612-9180e19d-28628-9a12c016.th  userapicollector-28612-9180e19d-28629-91f8bdd0.th  userapicollector-28612-9180e19d.trace
timers/test/e000/mp005/: annotations.advias2  mp005.advixe  summary.advisum
timers/test/e000/mp005/config/: collection.cfg  context_values.cfg  runtc.options
timers/test/e000/mp005/data.0/: .tc.lck  advixe-runtc.txt  timers.pdr  timers.pdr.db3  timers.pdr_bak
timers/test/e000/mp005/summary/: summary_data.xml
timers/test/e000/source_cache/: temporary_files.index
timers/test/e000/source_cache/temporary_files/: cache_37db98f501cad62253c60d70ef51105a_twoBodyDistances.hpp
timers/test/e000/trc002/: trc002.advixe
timers/test/e000/trc002/config/: collection.cfg  context_values.cfg  runtrc.options
timers/test/e000/trc002/data.0/: advixe-runtrc.txt  (+1 more)
tst/: twoBodyTest.cpp
(+4 files in other folders)
